Starting UI layout

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    Hello World!
+    <div id="content">
+      <div class="categories-section container">
+        <div class="group-by-period container">
+          <div class="group-by-period item">
+            <img
+              class="group-by-period svg"
+              src="./assets/calendar_view_day.svg"
+              alt=""
+            />
+            <span class="group-by-period text">Today</span>
+          </div>
+          <div class="group-by-period item">
+            <img
+              class="group-by-period svg"
+              src="./assets/calendar_view_week.svg"
+              alt=""
+            />
+            <span class="group-by-period text">Next 7 Days</span>
+          </div>
+        </div>
+      </div>
+      <div class="tasks-section container">
+        
+      </div>
+    </div>
   </body>
 </html>
