Tasks heading UI complete

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
         <hr>
         <div class="group-by other container">
             <div class="group-by other item">
-                <img class="group-by other svg" src="./assets/checkbox.svg" alt="">
+                <img class="group-by other svg" src="./assets/checkbox_checked.svg" alt="">
                 <span class="group-by other text">Completed</span>
             </div>
             <div class="group-by other item">
@@ -61,6 +61,16 @@
             <span class="tasks heading text">Default</span>
             <img class="tasks heading svg" src="./assets/sort.svg" alt="Sort">
             <img class="tasks heading svg" src="./assets/more_hori.svg" alt="More">
+        </div>
+        <div class="add-task input container">
+            <input id="add-task" name="add-task" type="text" placeholder="+ Add Task">
+            <div class="add-task svgs container">
+                <img src="./assets/calendar_options.svg" alt="Calendar Options" class="add-task svg">
+                <img src="./assets/arrow_down.svg" alt="Other Options" class="add-task svg">
+            </div>
+        </div>
+        <div class="task container">
+            
         </div>
       </div>
       <div class="view-task section container"></div>
