Add some new checkbox svgs

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,8 @@
             </div>
         </div>
         <div class="task container">
-            
+            <img class="task svg" src="./assets/checkbox.svg">
+            <span class="task name">broccoli</span>
         </div>
       </div>
       <div class="view-task section container"></div>
