Starting on the View Task Section

--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,8 @@
             </div>
         </div>
         <div class="task container">
-            <label for="checkbox">
-              <input name="checkbox" class="task checkbox" type="checkbox">
+            <label>
+              <input class="task checkbox" type="checkbox">
             </label>
             <div class="task-details container">
               <span class="task name">Egg noodles</span>
@@ -80,8 +80,9 @@
         </div>
         <hr class="task separator"/>
         <div class="task container">
-          <label for="checkbox">
-          <input class="task checkbox" type="checkbox">
+          <label>
+            <input class="task checkbox" type="checkbox">
+          </label>
         </label>
             <div class="task-details container">
               <span class="task name">chicken or beef</span>
@@ -90,7 +91,7 @@
         </div>
         <hr class="task separator"/>
         <div class="task container">
-          <label for="checkbox">
+          <label>
           <input class="task checkbox" type="checkbox">
         </label>
           <div class="task-details container">
@@ -100,7 +101,15 @@
         </div>
         <hr class="task separator"/>
       </div>
-      <div class="view-task section container"></div>
+      <div class="view-task section container">
+        <div class="view-task header container">
+          <label>
+            <input type="checkbox">
+          </label>
+          <span class="view-task header separator">|</span>
+          
+        </div>
+      </div>
     </div>
   </body>
 </html>
