Complete the look of the UI

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             <span class="group-by period text">All Tasks</span>
           </div>
         </div>
-        <hr class="categories separator" />
+        <hr class="horizontal categories separator" />
         <div class="group-by list container">
           <h4 class="group-by list heading">Lists</h3>
           <div class="group-by list item">
@@ -43,7 +43,7 @@
             <span class="group-by list text">Default</span>
           </div>
         </div>
-        <hr class="categories separator">
+        <hr class="horizontal categories separator">
         <div class="group-by other container">
             <div class="group-by other item">
                 <img class="group-by other svg" src="./assets/checkbox_checked.svg" alt="">
@@ -78,7 +78,7 @@
               <span class="task due-date">5 Days Left</span>
             </div>
         </div>
-        <hr class="task separator"/>
+        <hr class="horizontal task separator"/>
         <div class="task container">
           <label>
             <input class="task checkbox" type="checkbox">
@@ -89,7 +89,7 @@
               <span class="task due-date">Today</span>
             </div>
         </div>
-        <hr class="task separator"/>
+        <hr class="horizontal task separator"/>
         <div class="task container">
           <label>
           <input class="task checkbox" type="checkbox">
@@ -99,15 +99,37 @@
             <span class="task due-date">Today</span>
           </div>
         </div>
-        <hr class="task separator"/>
+        <hr class="horizontal task separator"/>
       </div>
       <div class="view-task section container">
         <div class="view-task header container">
           <label>
             <input type="checkbox">
           </label>
-          <span class="view-task header separator">|</span>
-          
+          <hr class="vertical view-task separator">
+          <span class="view-task date container">
+            <img class="view-task header svg" src="./assets/calendar_icon.svg">
+            <span class="view-task due-date">Due Date</span>
+          </span>
+          <img class="view-task header svg" src="./assets/priority_flag.svg">
+        </div>
+        <hr class="horizontal view-task separator">
+        <div class="view-task body container">
+          <h3 class="view-task name">Egg noodles</h3>
+          <p class="view-task description">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore labore architecto rerum molestiae beatae neque quisquam ullam ipsum minima suscipit voluptatem, odio voluptate quam, aliquam tempore! Tempora nulla commodi porro?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore labore architecto rerum molestiae beatae neque quisquam ullam ipsum minima suscipit voluptatem, odio voluptate quam, aliquam tempore! Tempora nulla commodi porro?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore labore architecto rerum molestiae beatae neque quisquam ullam ipsum minima suscipit voluptatem, odio voluptate quam, aliquam tempore! Tempora nulla commodi porro?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore labore architecto rerum molestiae beatae neque quisquam ullam ipsum minima suscipit voluptatem, odio voluptate quam, aliquam tempore! Tempora nulla commodi porro?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore labore architecto rerum molestiae beatae neque quisquam ullam ipsum minima suscipit voluptatem, odio voluptate quam, aliquam tempore! Tempora nulla commodi porro?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore labore architecto rerum molestiae beatae neque quisquam ullam ipsum minima suscipit voluptatem, odio voluptate quam, aliquam tempore! Tempora nulla commodi porro?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore labore architecto rerum molestiae beatae neque quisquam ullam ipsum minima suscipit voluptatem, odio voluptate quam, aliquam tempore! Tempora nulla commodi porro?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore labore architecto rerum molestiae beatae neque quisquam ullam ipsum minima suscipit voluptatem, odio voluptate quam, aliquam tempore! Tempora nulla commodi porro?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore labore architecto rerum molestiae beatae neque quisquam ullam ipsum minima suscipit voluptatem, odio voluptate quam, aliquam tempore! Tempora nulla commodi porro?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore labore architecto rerum molestiae beatae neque quisquam ullam ipsum minima suscipit voluptatem, odio voluptate quam, aliquam tempore! Tempora nulla commodi porro?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore labore architecto rerum molestiae beatae neque quisquam ullam ipsum minima suscipit voluptatem, odio voluptate quam, aliquam tempore! Tempora nulla commodi porro?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore labore architecto rerum molestiae beatae neque quisquam ullam ipsum minima suscipit voluptatem, odio voluptate quam, aliquam tempore! Tempora nulla commodi porro?
+          </p>
         </div>
       </div>
     </div>
