Working on adding the rest of the UI in dynamically, so sleepy

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div id="content"></div>
+    <div id="content">
+      <div id="tasks-section" class="tasks section container"></div>
+      <div id="view-task-section" class="view-task section container"></div>
+    </div>
   </body>
 </html>
