Add view task section with JS

--- a/src/copyof.html
+++ b/src/copyof.html
@@ -104,7 +104,7 @@
       <div class="view-task section container">
         <div class="view-task header container">
           <label>
-            <input type="checkbox">
+            <input class="view-task checkbox" type="checkbox">
           </label>
           <hr class="vertical view-task separator">
           <span class="view-task date container">
