Lists are added to categories section

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="content">
+      <div id="categories-section" class="categories section container"></div>
       <div id="tasks-section" class="tasks section container"></div>
       <div id="view-task-section" class="view-task section container"></div>
     </div>
