--- a/src/copyof.html
+++ b/src/copyof.html
@@ -8,117 +8,135 @@
   </head>
   <body>
     <div id="content">
-      <div class="categories section container">
+      <div id="categories-section" class="categories section container">
         <div class="group-by period container">
-          <div class="group-by period item">
+          <div class="group-by item period" data-list="-1">
             <img
-              class="group-by period svg"
-              src="./assets/calendar_view_day.svg"
-              alt=""
-            />
-            <span class="group-by period text">Today</span>
+              class="group-by svg period"
+              src="http://localhost:8080/1e5455ea01cac8d34fb2.svg"
+            /><span class="group-by text period">Today</span>
           </div>
-          <div class="group-by period item">
+          <div class="group-by item period" data-list="-1">
             <img
-              class="group-by period svg"
-              src="./assets/calendar_view_week.svg"
-              alt=""
-            />
-            <span class="group-by period text">Next 7 Days</span>
+              class="group-by svg period"
+              src="http://localhost:8080/dc971de870ad98f4d1f3.svg"
+            /><span class="group-by text period">Next 7 Days</span>
           </div>
-          <div class="group-by period item">
+          <div class="group-by item period" data-list="-1">
             <img
-              class="group-by period svg"
-              src="./assets/all_task_list.svg"
-              alt=""
-            />
-            <span class="group-by period text">All Tasks</span>
+              class="group-by svg period"
+              src="http://localhost:8080/696c0adf09cf1bafb8e4.svg"
+            /><span class="group-by text period">All Tasks</span>
           </div>
         </div>
         <hr class="horizontal categories separator" />
-        <div class="group-by list container">
-          <h4 class="group-by list heading">Lists</h3>
-          <div class="group-by list item">
-            <img class="group-by list svg" src="./assets/home_storage.svg" alt="">
-            <span class="group-by list text">Default</span>
+        <div>
+          <h4 class="group-by list heading">
+            Lists<img
+              class="add-list add-icon"
+              src="http://localhost:8080/c00940d37f34c89492c5.svg"
+            />
+            <dialog open class="add-list modal">
+              <form id="add-list-form" class="add-list form">
+                <h4 class="add-list form heading">Add List</h4>
+                <input
+                  class="add-list add-name"
+                  type="text"
+                  placeholder="List Name"
+                />
+              </form>
+              <div class="add-list buttons-container">
+                <button class="add-list button">Cancel</button>
+                <button
+                  class="add-list button"
+                  type="submit"
+                  form="add-list-form"
+                >
+                  Save
+                </button>
+              </div>
+            </dialog>
+          </h4>
+          <div class="group-by item list" data-list="0">
+            <img
+              class="group-by svg list"
+              src="http://localhost:8080/98e0fc963ee1519aa4a6.svg"
+            /><span class="group-by text list">Default</span>
+          </div>
+          <div class="group-by item list" data-list="1">
+            <img
+              class="group-by svg list"
+              src="http://localhost:8080/98e0fc963ee1519aa4a6.svg"
+            /><span class="group-by text list">new</span>
           </div>
         </div>
-        <hr class="horizontal categories separator">
+        <hr class="horizontal categories separator" />
         <div class="group-by other container">
-            <div class="group-by other item">
-                <img class="group-by other svg" src="./assets/checkbox_checked.svg" alt="">
-                <span class="group-by other text">Completed</span>
-            </div>
-            <div class="group-by other item">
-                <img class="group-by other svg" src="./assets/delete.svg" alt="">
-                <span class="group-by other text">Trash</span>
-            </div>
+          <div class="group-by item other" data-list="-1">
+            <img
+              class="group-by svg other"
+              src="http://localhost:8080/5c623fc51542a3b119b3.svg"
+            /><span class="group-by text other">Completed</span>
+          </div>
+          <div class="group-by item other" data-list="-1">
+            <img
+              class="group-by svg other"
+              src="http://localhost:8080/7c654f0bc84ec0171082.svg"
+            /><span class="group-by text other">Trash</span>
+          </div>
         </div>
       </div>
-      <div class="tasks section container">
+      <div id="tasks-section" class="tasks section container" data-list="0">
         <div class="tasks heading container">
-            <img class="tasks heading svg" src="./assets/menu_collapse.svg" alt="Menu Collapse">
-            <span class="tasks heading text">Default</span>
-            <img class="tasks heading svg" src="./assets/sort.svg" alt="Sort">
-            <img class="tasks heading svg" src="./assets/more_hori.svg" alt="More">
+          <img
+            class="tasks heading svg"
+            src="http://localhost:8080/d3cb7c5453dc65ef4447.svg"
+            alt="Menu Collapse"
+            id="menu-toggle"
+          /><span class="tasks heading text">Default</span
+          ><img
+            class="tasks heading svg"
+            src="http://localhost:8080/0c3ff02fc064ac5ec7d3.svg"
+            alt="Sort Tasks"
+          /><img
+            class="tasks heading svg"
+            src="http://localhost:8080/aac302c60a4ddc9d4190.svg"
+            alt="More"
+          />
         </div>
         <div class="add-task input container">
-            <input id="add-task" name="add-task" type="text" placeholder="+ Add Task">
-            <div class="add-task svgs container">
-                <img src="./assets/calendar_options.svg" alt="Calendar Options" class="add-task svg">
-                <img src="./assets/arrow_down.svg" alt="Other Options" class="add-task svg">
-            </div>
-        </div>
-        <div class="task container">
-            <label>
-              <input class="task checkbox" type="checkbox">
-            </label>
-            <div class="task-details container">
-              <span class="task name">Egg noodles</span>
-              <span class="task due-date">5 Days Left</span>
-            </div>
-        </div>
-        <hr class="horizontal task separator"/>
-        <div class="task container">
-          <label>
-            <input class="task checkbox" type="checkbox">
-          </label>
-        </label>
-            <div class="task-details container">
-              <span class="task name">chicken or beef</span>
-              <span class="task due-date">Today</span>
-            </div>
-        </div>
-        <hr class="horizontal task separator"/>
-        <div class="task container">
-          <label>
-          <input class="task checkbox" type="checkbox">
-        </label>
-          <div class="task-details container">
-            <span class="task name">1 carrot</span>
-            <span class="task due-date">Today</span>
+          <input
+            id="add-task"
+            name="add-task"
+            type="text"
+            placeholder="+ Add Task"
+          />
+          <div class="add-task svgs container">
+            <img
+              class="add-task svg"
+              src="http://localhost:8080/99255a40ae2243497579.svg"
+              alt="Calendar Options"
+            /><img
+              class="add-task svg"
+              src="http://localhost:8080/3d98e35bcafd38b718f3.svg"
+              alt="Other Options"
+            />
           </div>
         </div>
-        <hr class="horizontal task separator"/>
-      </div>
-      <div class="view-task section container">
-        <div class="view-task header container">
-          <label>
-            <input class="view-task checkbox" type="checkbox">
-          </label>
-          <hr class="vertical view-task separator">
-          <span class="view-task date container">
-            <img class="view-task header svg" src="./assets/calendar_icon.svg">
-            <span class="view-task due-date">Due Date</span>
-          </span>
-          <img class="view-task header svg" src="./assets/priority_flag.svg">
+        <div class="task container" data-task="0">
+          <label
+            ><input class="task checkbox" type="checkbox" /><span
+              class="checkmark"
+            ></span
+          ></label>
+          <div class="task-details container">
+            <span class="task name" data-ph="No Title">boop</span
+            ><span class="task due-date">Tue Feb 20 2024</span>
+          </div>
         </div>
-        <hr class="horizontal view-task separator">
-        <div class="view-task body container">
-          <h3 class="view-task name">Egg noodles</h3>
-          <div id="task-description" class="view-task description" contenteditable="true" data-ph="Description"></div>
-        </div>
+        <hr class="horizontal task separator" />
       </div>
+      <div id="view-task-section" class="view-task section container"></div>
     </div>
   </body>
 </html>
