--- a/src/copyof.html
+++ b/src/copyof.html
@@ -30,14 +30,14 @@
           </div>
         </div>
         <hr class="horizontal categories separator" />
-        <div>
+        <div class="group-by list container">
           <h4 class="group-by list heading">
             Lists<img
               class="add-list add-icon"
               src="http://localhost:8080/c00940d37f34c89492c5.svg"
             />
-            <dialog open class="add-list modal">
-              <form id="add-list-form" class="add-list form">
+            <dialog class="add-list modal">
+              <form class="add-list form">
                 <h4 class="add-list form heading">Add List</h4>
                 <input
                   class="add-list add-name"
@@ -46,18 +46,19 @@
                 />
               </form>
               <div class="add-list buttons-container">
-                <button class="add-list button">Cancel</button>
-                <button
-                  class="add-list button"
+                <button class="add-list button cancel">Cancel</button
+                ><button
+                  class="add-list button save"
                   type="submit"
                   form="add-list-form"
+                  disabled=""
                 >
                   Save
                 </button>
               </div>
             </dialog>
           </h4>
-          <div class="group-by item list" data-list="0">
+          <div class="group-by item list active" data-list="0">
             <img
               class="group-by svg list"
               src="http://localhost:8080/98e0fc963ee1519aa4a6.svg"
@@ -103,6 +104,12 @@
             src="http://localhost:8080/aac302c60a4ddc9d4190.svg"
             alt="More"
           />
+          <dialog class="tasks more-dropdown">
+            <div class="more-dropdown item container">
+              <img class="more-dropdown item svg" src="./assets/delete.svg" alt="Delete List"/>
+              <span class="more-dropdown item text">Delete</span>
+            </div>
+          </dialog>
         </div>
         <div class="add-task input container">
           <input
@@ -113,11 +120,11 @@
           />
           <div class="add-task svgs container">
             <img
-              class="add-task svg"
+              class="add-task svg hidden"
               src="http://localhost:8080/99255a40ae2243497579.svg"
               alt="Calendar Options"
             /><img
-              class="add-task svg"
+              class="add-task svg hidden"
               src="http://localhost:8080/3d98e35bcafd38b718f3.svg"
               alt="Other Options"
             />
@@ -134,9 +141,57 @@
             ><span class="task due-date">Tue Feb 20 2024</span>
           </div>
         </div>
-        <hr class="horizontal task separator" />
+        <hr class="horizontal task separator" data-task="0" />
+        <div class="task container active" data-task="1">
+          <label
+            ><input class="task checkbox" type="checkbox" /><span
+              class="checkmark"
+            ></span
+          ></label>
+          <div class="task-details container">
+            <span class="task name" data-ph="No Title">hallohallo</span
+            ><span class="task due-date">Thu Jun 13 2024</span>
+          </div>
+        </div>
+        <hr class="horizontal task separator hidden" data-task="1" />
       </div>
-      <div id="view-task-section" class="view-task section container"></div>
+      <div
+        id="view-task-section"
+        class="view-task section container"
+        data-task="1"
+      >
+        <div class="view-task header container">
+          <label
+            ><input class="view-task checkbox" type="checkbox" /><span
+              class="checkmark"
+            ></span
+          ></label>
+          <hr class="vertical view-task separator" />
+          <span class="view-task date container"
+            ><img
+              class="view-task header svg"
+              src="http://localhost:8080/9606bfc0701d426241f7.svg"
+            /><span class="view-task due-date">Thu Jun 13 2024</span></span
+          ><img
+            class="view-task header svg"
+            src="http://localhost:8080/88e72dee00147aa92cbc.svg"
+            alt="Priority"
+          />
+        </div>
+        <hr class="horizontal view-task separator" />
+        <div class="view-task body container">
+          <h3 class="view-task name" contenteditable="true" data-ph="Task Name">
+            hallohallo
+          </h3>
+          <div
+            class="view-task description"
+            contenteditable="true"
+            data-ph="Description"
+          >
+            duuuduuuduu
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
