Date picker is toggleable from calendar icon Date picker can be opened by clicking the calendar icon and the icon will change color when a date has been picked

--- a/src/copyof.html
+++ b/src/copyof.html
@@ -108,7 +108,7 @@
             </div>
           </dialog>
         </div>
-        <div class="add-task input container">
+        <label class="add-task input container">
           <input
             id="add-task"
             name="add-task"
@@ -126,7 +126,7 @@
               alt="Other Options"
             />
           </div>
-        </div>
+        </label>
         <div class="task container" data-task="0">
           <label
             ><input class="task checkbox" type="checkbox" /><span
