Reorganize some variable names and code order - Changed the sections classes to just be "_____ section" - Added new container for all the tasks in task section

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <div id="content">
-      <div id="categories-section" class="categories section container"></div>
-      <div id="tasks-section" class="tasks section container"></div>
-      <div id="view-task-section" class="view-task section container"></div>
+      <div id="categories-section" class="categories section"></div>
+      <div id="tasks-section" class="tasks section"></div>
+      <div id="view-task-section" class="view-task section"></div>
     </div>
   </body>
 </html>
